--- a/refrences.bib
+++ b/refrences.bib
@@ -500,12 +500,6 @@ on root volumes, especially during early boot. In this paper we describe an appr
  keywords = {computer forensics, information flow, intrusion analysis},
 } 
 
-@Book{TCDP1999,
-    publisher = {Cambridge University Press},
-    author = {Rationality.},
-    title = {{The Cambridge Dictionary of Philosophy}},
-    year = {1999},
-}
 
 @inproceedings{Hasan:2009:CFP:1525908.1525909,
  author = {Hasan, Ragib and Sion, Radu and Winslett, Marianne},
@@ -572,4 +566,58 @@ on root volumes, especially during early boot. In this paper we describe an appr
  address = {New York, NY, USA},
  keywords = {Cloud, Prov, Provenance, Share, XACML, cProv, cProvl},
 } 
+
+@Book{TCDP1999,
+    publisher = {Cambridge University Press},
+    author = {Rationality.},
+    title = {{The Cambridge Dictionary of Philosophy}},
+    year = {1999},
+}
+
+@TECHREPORT {emc_bigdata,
+    author      = "John Gantz, David Reinsel",
+    title       = "THE DIGITAL UNIVERSE IN 2020: Big Data, Bigger Digital Shadow s, and Biggest Grow th in the Far East",
+    institution = "EMC  Corporation",
+    year        = "2012",
+    month       = "apr",
+    howpublished = "\url{https://www.emc.com/collateral/analyst-reports/idc-the-digital-universe-in-2020.pdf}"
+}
+
+@Inbook{Bertino2015,
+author="Bertino, Elisa",
+editor="Garcia-Alfaro, Joaquin
+and Herrera-Joancomart{\'i}, Jordi
+and Lupu, Emil
+and Posegga, Joachim
+and Aldini, Alessandro
+and Martinelli, Fabio
+and Suri, Neeraj",
+title="Data Trustworthiness---Approaches and Research Challenges",
+bookTitle="Data Privacy Management, Autonomous Spontaneous Security, and Security Assurance: 9th International Workshop, DPM 2014, 7th International Workshop, SETOP 2014,  and 3rd International Workshop, QASA 2014, Wroclaw, Poland, September 10-11, 2014. Revised Selected Papers",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="17--25",
+isbn="978-3-319-17016-9",
+doi="10.1007/978-3-319-17016-9_2",
+url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
+}
+
+@article{zawoadfecloud,
+  title={FECloud: A Trustworthy Forensics-Enabled Cloud Architecture},
+  author={Zawoad, Shams and Hasan, Ragib},
+  booktitke= {11th Annual IFIP WG 11.9 International Conference on Digital Forensics}, 
+  year = {2015}
+}
+
+@inproceedings{braun2006issues,
+  title={Issues in automatic provenance collection},
+  author={Braun, Uri and Garfinkel, Simson and Holland, David A and Muniswamy-Reddy, Kiran-Kumar and Seltzer, Margo I},
+  booktitle={International Provenance and Annotation Workshop},
+  pages={171--183},
+  year={2006},
+  organization={Springer}
+}
+
+
 
