--- a/chapter1.tex
+++ b/chapter1.tex
@@ -30,7 +30,7 @@ Most provenance-aware systems collect a fixed amount of provenance data(e.g syst
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[height=3in]{smart_h.png}
+\includegraphics[height=3in]{smart_home_use_case.png}
 \end{center}
 \caption{Smart home use case Diagram}
 \label{smart_home}
