--- a/refrences.bib
+++ b/refrences.bib
@@ -619,5 +619,20 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
   organization={Springer}
 }
 
+@TECHREPORT {prov_json,
+    title       = "PROV-DM: The PROV Data Model",
+    institution = "W3C",
+    year        = "2013",
+    month       = "apr",
+    
+     howpublished = "\url{http://www.w3.org/Submission/2013/SUBM-prov-json-20130424}"
+}
+
+@inproceedings{Bates2014LinuxPM,
+  title={Linux Provenance Modules: Secure Provenance Collection for the Linux Kernel},
+  author={Adam Bates and Kevin R B Butler and Thomas Moyer},
+  year={2014}
+}
+
 
 
