--- a/refrences.bib
+++ b/refrences.bib
@@ -634,5 +634,30 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
   year={2014}
 }
 
+@inproceedings{Bates:2015:TOY:2814579.2814586,
+ author = {Bates, Adam and Butler, Kevin R. B. and Moyer, Thomas},
+ title = {Take Only What You Need: Leveraging Mandatory Access Control Policy to Reduce Provenance Storage Costs},
+ booktitle = {Proceedings of the 7th USENIX Conference on Theory and Practice of Provenance},
+ series = {TaPP'15},
+ year = {2015},
+ location = {Edinburgh, Scotland},
+ pages = {7--7},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=2814579.2814586},
+ acmid = {2814586},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@inproceedings{asiaccs12-vijayakumar,
+   author = {Hayawardh Vijayakumar and Joshua Schiffman and Trent Jaeger},
+   title = {Integrity Walls: Finding attack surfaces from mandatory access
+	control policies},
+   booktitle = {7th ACM Symposium on Information, Computer, and
+	Communications Security (ASIACCS)},
+   month = may,
+   year = {2012}
+}
+
 
 
